--- a/_variables.yml
+++ b/_variables.yml
@@ -1,16 +1,16 @@
-title: "EMSE 4571: Intro. to Programming for Analytics (Spring 2023)"
+title: "EMSE 6035: Marketing Analytics for Design Decisions (Fall 2023)"
 name: Intro. to Programming for Analytics
 email: jph@gwu.edu
-number: EMSE 4571 / 6571
-crn: 66620 / 69017
-semester: Spring 2023
-weekday: "Thursdays"
-dates: "Jan. 19 - May 11, 2023"
-time: "12:45PM - 3:15PM EST"
-room: 'Corcoran Hall 207'
+number: EMSE 6035
+crn: 48261
+semester: Fall 2023
+weekday: "Wednesdays"
+dates: "Aug. 30 - Dec 13, 2023"
+time: "6:10PM - 8:40PM EST"
+room: 'Phillips Hall 415'
 room_address: 725 21st Street NW
 room_url: "https://acadtech.gwu.edu/location?id=382&campus=FB&type=building&selection=37"
-slack: "https://emse-p4a-s23.slack.com"
-repo: "https://github.com/emse-p4a-gwu/2023-Spring"
-site_url: "https://p4a.seas.gwu.edu/2023-Spring/"
-root_url: "https://p4a.seas.gwu.edu/"
+slack: "https://emse-madd-f23.slack.com"
+repo: "https://github.com/emse-madd-gwu/2023-Fall"
+site_url: "https://madd.seas.gwu.edu/2023-Fall/"
+root_url: "https://madd.seas.gwu.edu/"
