--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,21 @@ project:
   render:
     - "*.qmd"
     - "!fragments/"
+    - "!1-getting-started/"
+    - "!2-data-wrangling/"
+    - "!3-quarto-plotting/"
+    - "!4-intro-to-formr/"
+    - "!5-workshop-proposals/"
+    - "!6-conjoint-questions/"
+    - "!7-utility-models/"
+    - "!8-optimization-mle/"
+    - "!9-uncertainty/"
+    - "!10-doe-power-analysis/"
+    - "!11-wtp-simulation/"
+    - "!12-heterogeneity/"
+    - "!14-class-review/"
+    - "!15-communicating-results/"
+    - "!16-final-presentations/"
   resources:
     - "class/"
     - "rubrics/"
