--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: main
   schedule:
-    Runs daily at midnight (EST)
+    # Runs daily at midnight (EST)
     - cron: '0 5 * * *'
 
 jobs:
